--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <header class="header">
       <img src="me2.jpg" alt="avatar" class="header__avatar" />
       <h1 class="header__title">Mukhametzhan Kunashuly</h1>
-      <h3 class="header__subtitle">эксперт по чатгпт</h3>
+      <h3 class="header__subtitle">-</h3>
     </header>
 
     <main>
