--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <ul class="links__container">
           <li class="links__link">
             <p class="links__title">Telegram</p>
-            <a class="linsk__link" href="http://t.me/isanysense">@isanysense</a>
+            <a class="linsk__link" href="http://t.me/satisfactory_4">@satisfactory_4</a>
           </li>
           
           <li class="links__link">
